<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="noDevice">No device detected\nPlease connect iNemo board\n</string>
    <string name="connect">Connect</string>
    <string name="app_name">iNemoADK</string>
    <string name="empty_string"></string>
    <string name="disconnect">Disconnect</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop Acquisition</string>
    <string name="discard">Discard</string>
    <string name="apply">Apply</string>

</resources>