<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ScrollView
		android:id="@+id/ScrollView01"
		android:layout_height="0px"
		android:layout_weight="1.5"   
		android:layout_width="match_parent"
		android:layout_margin="10dp"> 
			<TextView
		        android:id="@+id/iNemoInfolabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/empty_string" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
		android:layout_weight="0.4"  >
			

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/disconnect" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/settings" />

        <Button
            android:id="@+id/startAcquisitionButton"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/start" />

    </LinearLayout>
    
    <ScrollView
		android:id="@+id/ScrollView02"
		android:layout_height="0px"
		android:layout_weight="0.4"   
		android:layout_width="match_parent"
		android:layout_margin="10dp"> 
			<TextView
		        android:id="@+id/debugLabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/empty_string" />
    </ScrollView>

    

</LinearLayout>